Added guake. Added config of micro for root

--- a/micro/settings.json
+++ b/micro/settings.json
@@ -4,6 +4,7 @@
     "colorscheme": "darcula",
     "diffgutter": true,
     "linter": false,
+    "parsecursor": true,
     "pluginchannels": [
         "https://raw.githubusercontent.com/micro-editor/plugin-channel/master/channel.json"
     ],
