Updated kitty layouts

--- a/kitty/dr.conf
+++ b/kitty/dr.conf
@@ -1,6 +1,6 @@
 # About: https://sw.kovidgoyal.net/kitty/conf.html
 
-enabled_layouts tall,fat,stack,grid,horizontal,vertical
+enabled_layouts grid,stack
 font_size 13
 cursor #9999FF
 cursor_blink_interval 0
