Finally, ideal kitty layouts

--- a/kitty/dr.conf
+++ b/kitty/dr.conf
@@ -1,6 +1,6 @@
 # About: https://sw.kovidgoyal.net/kitty/conf.html
 
-enabled_layouts grid,stack
+enabled_layouts tall:mirrored=true,stack
 font_size 13
 cursor #9999FF
 cursor_blink_interval 0
