Micro as git commit message editor. Dart indentation: 2 spaces

--- a/micro/settings.json
+++ b/micro/settings.json
@@ -14,5 +14,9 @@
     "savehistory": false,
     "statusformatl": "L$(line) C$(col)",
     "statusformatr": "$(status.branch) $(filename) $(modified)",
+    "tabsize": 4,
+    "ft:dart": {
+        "tabsize": 2
+    },
     "tabstospaces": true
 }
