Updated kitty config

--- a/kitty/dr.conf
+++ b/kitty/dr.conf
@@ -1,11 +1,10 @@
-# About: https://sw.kovidgoyal.net/kitty/conf.html
+# Docs: https://sw.kovidgoyal.net/kitty/conf/
 
 enabled_layouts tall:mirrored=true,stack
 font_size 13
 cursor #9999FF
 cursor_blink_interval 0
 url_color #6666FF
-open_url_modifiers ctrl
 open_url_with google-chrome
 enable_audio_bell no
 visual_bell_duration 0.01
