Improved kitty config: avoid accidental URL clicks, use Ctrl+Click to open URLs, noted main shortcuts

--- a/kitty/dr.conf
+++ b/kitty/dr.conf
@@ -1,19 +1,33 @@
 # Docs: https://sw.kovidgoyal.net/kitty/conf/
 
-enabled_layouts tall:mirrored=true,stack
-font_size 13
-cursor #9999FF
-cursor_blink_interval 0
-url_color #6666FF
-open_url_with google-chrome
-enable_audio_bell no
-visual_bell_duration 0.01
-active_border_color #6666FF
-selection_background #9999FF
+# Layout: use splits (windows), not tabs
+# Open: Ctrl+Enter
 map ctrl+enter launch --cwd=current
+# Close: Ctrl+W
+# Move: Ctrl+F/B
+# Focus: Ctrl+[/]
+# Fullscreen: Ctrl+Shift+L
+enabled_layouts tall:mirrored=true,stack
 
-# Allow text selection in editor, use kitty splits, not tabs:
+# Allow text selection in editor
 map ctrl+shift+left no_op
 map ctrl+shift+right no_op
 map ctrl+shift+home no_op
 map ctrl+shift+end no_op
+
+# Avoid accidental URL clicks, use Ctrl+Click to open URLs in Chrome
+mouse_map left click ungrabbed no-op
+mouse_map ctrl+left click ungrabbed mouse_click_url_or_select
+open_url_with google-chrome
+
+# Style
+font_size 13
+enable_audio_bell no
+visual_bell_duration 0.01
+
+# Colors
+active_border_color #6666FF
+cursor #9999FF
+cursor_blink_interval 0
+selection_background #9999FF
+url_color #6666FF
