kitty: replaced not-working Ctrl+Click on URL with working default Shift+Click

--- a/kitty/dr.conf
+++ b/kitty/dr.conf
@@ -15,9 +15,8 @@ map ctrl+shift+right no_op
 map ctrl+shift+home no_op
 map ctrl+shift+end no_op
 
-# Avoid accidental URL clicks, use Ctrl+Click to open URLs in Chrome
+# Avoid accidental URL clicks, use Shift+Click to open URLs in Chrome
 mouse_map left click ungrabbed no-op
-mouse_map ctrl+left click ungrabbed mouse_click_url_or_select
 open_url_with google-chrome
 
 # Style
