--- a/micro/settings.json
+++ b/micro/settings.json
@@ -7,6 +7,9 @@
         "colorcolumn": 80,
         "tabsize": 2
     },
+    "ft:html": {
+        "tabsize": 2
+    },
     "ft:json": {
         "tabsize": 2
     },
