Updated micro editor config: need 100 columns for TypeScript.

--- a/micro/settings.json
+++ b/micro/settings.json
@@ -13,6 +13,9 @@
     "ft:json": {
         "tabsize": 2
     },
+    "ft:typescript": {
+        "colorcolumn": 100,
+    },
     "ft:yaml": {
         "tabsize": 2
     },
