Added macOS specific config.

--- a/kitty/dr.conf
+++ b/kitty/dr.conf
@@ -18,6 +18,7 @@ map ctrl+shift+end no_op
 # Avoid accidental URL clicks, use Shift+Click to open URLs in Chrome
 mouse_map left click ungrabbed no-op
 open_url_with google-chrome
+# For macOS, comment-out the line above
 
 # Style
 font_size 13
@@ -30,3 +31,6 @@ cursor #9999FF
 cursor_blink_interval 0
 selection_background #9999FF
 url_color #6666FF
+
+# macOS
+macos_option_as_alt yes
