Improved kitty splits shortcuts.

--- a/kitty/dr.conf
+++ b/kitty/dr.conf
@@ -1,13 +1,21 @@
 # Docs: https://sw.kovidgoyal.net/kitty/conf/
 
 # Layout: use splits (windows), not tabs
-# Open: Ctrl+Enter
-map ctrl+enter launch --cwd=current
-# Close: Ctrl+W
-# Move: Ctrl+F/B
-# Focus: Ctrl+[/]
-# Fullscreen: Ctrl+Shift+L
+
+# Open: Alt+Enter
+map alt+enter launch --cwd=current
+
+# Fullscreen: Ctrl+Enter
+map ctrl+enter next_layout
 enabled_layouts tall:mirrored=true,stack
+
+# Focus: Ctrl+,/. as arrows <>
+map ctrl+comma previous_window
+map ctrl+period next_window
+
+# Move: Alt+,/. as arrows <>
+map alt+comma move_window_backward
+map alt+period move_window_forward
 
 # Allow text selection in editor
 map ctrl+shift+left no_op
